--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "express-mesto",
   "version": "1.0.0",
   "description": "Реализация бэкэнд составляющей проекта Место на node и express",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
